fix wrong width house

--- a/style.css
+++ b/style.css
@@ -654,7 +654,7 @@ footer div a {
         width: 40%;
     }
     .ctnFirstItem {
-        max-height: 500px;
+        max-height: 125px;
     }
 
     .figureLink {
@@ -891,7 +891,7 @@ footer div a {
     }
 
     .ctnHouse {
-        width: 90%;
+        width: 95%;
     }
 
     .mostFamous figure {
